[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/textures/message.png" type="Texture" id=1]
[ext_resource path="res://ui/MenuLayer.gd" type="Script" id=2]
[ext_resource path="res://fonts/flappyfont_48.tres" type="DynamicFont" id=3]

[node name="MenuLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="StartMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartMessage" type="TextureRect" parent="StartMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.0
margin_top = -320.0
margin_right = 138.0
margin_bottom = 80.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -134.0
margin_top = -251.0
margin_right = 134.0
margin_bottom = -14.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="GameOverMenu/VBoxContainer"]
margin_right = 268.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 1
text = "SCORE: 0"
align = 1

[node name="HighScoreLabel" type="Label" parent="GameOverMenu/VBoxContainer"]
margin_top = 64.0
margin_right = 268.0
margin_bottom = 113.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 1
text = "BEST: 0"
align = 1

[node name="RestartButton" type="Button" parent="GameOverMenu/VBoxContainer"]
margin_top = 128.0
margin_right = 268.0
margin_bottom = 203.0
rect_min_size = Vector2( 0, 75 )
custom_fonts/font = ExtResource( 3 )
text = "RESTART"

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="GameOverMenu/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
